syntax = "proto3";
package apiProto;
option go_package = "./proto";//github.com/AccumulateNetwork/accumulated/proto";

//go:generate protoc example.proto --go_out=plugins=grpc:$GOPATH/src

import "google/protobuf/empty.proto";

service ApiService {
	rpc PostEntry(EntryBytes) returns (Reply) {}
	rpc ReadKeyValue(Key) returns (KeyValue) {}
	rpc RequestAccount(Key) returns (Account){}
	rpc GetHeight(google.protobuf.Empty) returns (Height) {}
	rpc GetNodeInfo(google.protobuf.Empty) returns (NodeInfo) {}
}


//Directory Block Validation Chain (DBVC) Instruction Header
message DBVCInstructionHeader {
	enum insType
	{
		Unknown                  = 0;
		BVCSubmission            = 1; // submission instruction issued at each end of block of VBC.
		RegisterBVCMasterChain 	 = 2; // add a new master chain
		RemoveBVCMasterChain 	   = 3; // remove a master chain the network.  May need to have blacklists so that core chain's cannot be removed without a fork?
	}
	uint64   bvcMasterChainAddr = 1; // block validation chain (BVC) address - sha256(chainId)[0:7] - from which BVC master chain did this request originate
	insType  instruction        = 2; // type of instruction / request, will have one of the values of
}

message BVCSubmissionRequest
{
	DBVCInstructionHeader header = 1;
	bytes   bvcValidatorDDII     = 2; // Specific Digital identity of validator within the BVC
	bytes   mdrc                 = 3; // Merkel DAG Redeem Condition (41 bytes) consists of [version (1 byte), blockheight (4 bytes) | timestamp (4 bytes) | Merkel DAG Root hash (32 Bytes)]
	bytes   signature            = 4; // Signature: ed25519[ mdrc ]
}

message BVCSubmissionResponse
{
	bytes  responseData = 1; // error message???
	uint64 errorCode = 2;    // error code if it fails the sanity check
}

message ValRequest
{
	uint64  validatorAddr  = 1; // block validation chain address - sha256(chainId)[0:7] - big-endian or little-endian?
	uint32  instruction 	 = 2; // instruction code used by the validator - e.g. "write data"
	uint32  parameter1     = 3; // parameter 1 specific to the instruction
	uint32  parameter2     = 4; // parameter 2 specific to the instruction
	uint64 	nonce          = 5; // typically time stamp or monotonic counter
	bytes   data           = 6; // payload for validator - Command Data
	bytes   signed         = 7; // ed25519 signature
}

// [address][Type][Nonce][Data][Sign]

// [Key]  32 bytes
// [Type] 1 byte  (var_int)
// [Nonce] 8 byte (typically time stamp)
// [Data] ? bytes
// [Sign] 32 bytes (type+nonce+data)
//
//message ValRequest
//{
//	bytes   bvcaddress     = 1; // block validation chain address - sha256(chainId)[0:7] - big-endian or little-endian
//	uint32  instruction 	 = 2; // instruction code used by the validator - e.g. "write data"
//	uint32  parameter1     = 3; // parameter 1 specific to the instruction
//	uint32  parameter2     = 4; // parameter 2 specific to the instruction
//	uint64 	nonce          = 5; // typically time stamp or monotonic counter
//	bytes   data           = 6; // payload for validator - Command Data
//	bytes   signed         = 7; // ed25519 signature
//}


message ValReponse
{
	bytes  responseData = 1;
	uint64 errorCode = 2;
}


// [Key][Type][Nonce][Data][Sign]

// [Key]  32 bytes
// [Type] 1 byte  (var_int)
// [Nonce] 8 byte (typically time stamp)
// [Data] ? bytes
// [Sign] 32 bytes (type+nonce+data)

message Entry
{
	enum msgType
	{
			WriteEntryBytes 	 = 0;
			WriteKeyValue 		 = 1;
			ReadKeyValue 			 = 2;
			AccountWrite 			 = 100;
			AccountRead 			 = 101;
			GasAllowanceUpdate = 105;
	}

	bytes 	key 			  	= 1;
	msgType messageType 	= 2;
	uint64 	nonce					= 3; //(typically time stamp)
	bytes 	data				  = 4;
	bytes 	signed				= 5;
}

message Height
{
	uint64 height				= 1;
}

message EntryBytes
{
	bytes Data = 1;
}

message Account
{
	string	 name 						= 1;
	string	 owner 						= 2;
	int32		 messageAllowance = 3;
	repeated Group groups 		= 4;
	bool 		 allowAddAccounts	= 5;
	bool 		 allowAddGroups		= 6;

	message Group
	{
		string name 				   			= 1;
		bool   adminRights  				= 2;
	}
}

message Group
{
	string name						= 1;
	string description 		= 2;
}

message AccountAdd
{
	bytes  publicKey = 1;
	Account account = 2;
}


message GasAllowanceUpdate {
	bytes  accountKey = 1;
	int32  gasAllowance = 2;
}

message Reply
{
	bytes   hash   = 1;
	uint64  height = 2;
	string  error  = 3;
}

message KeyValue
{
	bytes  key 		= 1;
	bytes  value 	= 2;
	uint64 height = 3;
}

message Key
{
	bytes  key 		= 1;
}

message NodeInfo
{
	string version = 1;
}